# mayth

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  test.txt
src/angle/: mod.rs
src/matrix/: mat4.rs
src/quat/: mod.rs
src/simd/: mod.rs
src/vec/: mod.rs  vec2.rs  vec3.rs
