[package]
name = "mayth"
version = "0.0.1-alpha.5"
description = "A general-purpose math library for Rust."
license = "MIT"
edition = "2024"
repository = "https://github.com/kootfe/mayth"
readme = "README.md"
keywords = ["math", "vector", "matrix", "gamedev"]
categories = ["mathematics", "game-development"]

[dependencies]
bytemuck = { version = "1.25.0", optional = true, features = ["derive"] }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
default = []

bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]
